examples/test/testpolicy19820.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19820
  namespace: namespace334
spec:
  podSelector:
    matchLabels:
      key0: value33
      key6: value7
      key37: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value13
          key29: value10
          key7: value27
      podSelector:
        matchLabels:
          key25: value7
          key27: value0
